Mobile design complete

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <header class="product-preview-wrapper">
       <section class="product-preview-container">
         <div class="product-preview-image">
-          <img src="images/image-product-desktop.jpg" alt="product" />
+          
         </div>
 
         <div class="product-preview-details">
@@ -45,7 +45,7 @@
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
-      >. Coded by <a href="#">Your Name Here</a>.
+      >. Coded by <a href="#">Daniel Omehe</a>.
     </footer>
   </body>
 </html>
